--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<div class="Item">
 				<div class="Grid">
 					<div class="Grid__item Grid__item_quarter"></div>
-					<div class="Grid__item Grid__item_quarter Grid__item_adaptiv">
+					<div class="Grid__item Grid__item_quarter Grid__item_tabletRight Grid__item_mobile100">
 						<p class="Item__indicator Item__indicator_first">
 							100 
 						</p>
@@ -95,7 +95,7 @@
 							Per Capsule
 						</p>
 					</div>
-					<div class="Grid__item Grid__item_quarter Grid__item_adaptiv ">
+					<div class="Grid__item Grid__item_quarter Grid__item_tabletRight Grid__item_mobile100 ">
 						<p class="Item__indicator">
 							60 
 						</p>
@@ -106,7 +106,7 @@
 							Per Bottle
 						</p>
 					</div>
-					<div class="Grid__item Grid__item_quarter Grid__item_adaptiv">
+					<div class="Grid__item Grid__item_quarter Grid__item_tabletRight Grid__item_mobile100">
 						<p class="Item__indicator">
 							900 
 						</p>
@@ -137,7 +137,7 @@
 				</p>
 			</div>
 			<div class="Grid">
-				<div class="Grid__item Grid__item_small Grid__item_alignRight Grid__item_adaptiv">
+				<div class="Grid__item Grid__item_small Grid__item_alignRight Grid__item_mobile100">
 					<div class="FeauresBox">
 						<h3 class="FeauresBox__Heading FeauresBox__Heading_padRight">
 							Increased Energy
@@ -155,10 +155,10 @@
 						</p>
 					</div>
 				</div>
-				<div class="Grid__item Grid__item_small Grid__item_alignCenter Grid__item_adaptiv">
+				<div class="Grid__item Grid__item_small Grid__item_alignCenter Grid__item_mobile100">
 					<img class="Features__pic" src="img/Features__pic.png" alt="people">
 				</div>
-				<div class="Grid__item Grid__item_small Grid__item_adaptiv">
+				<div class="Grid__item Grid__item_small Grid__item_mobile100">
 					<div class="FeauresBox">
 						<h3 class="FeauresBox__Heading FeauresBox__Heading_padLeft">
 							Bone Builder
@@ -286,7 +286,7 @@
 			</p>
 		</div>
 		<div class="Grid Grid_little">
-			<div class="Grid__item Grid__item_Adaptiv100">
+			<div class="Grid__item Grid__item_mobile100 Grid__item_marginTop">
 				<h2 class="Table__caption">
 						Ingredients
 					<span class="Table__num Table__num_captionT">
@@ -337,7 +337,7 @@
 					</button>
 				</div>
 			</div>
-			<div class="Grid__item Grid__item_supplement Grid__item_Adaptiv100">
+			<div class="Grid__item Grid__item_supplement Grid__item_mobile100 Grid__item_marginTop">
 				<div class="More">
 					<img class="More__photo" src="img/More__photo.png" alt="photo">
 					<div class="More__product">
@@ -368,19 +368,19 @@
 				</p>
 			</div>
 			<div class="Grid Grid_little">
-				<div class="Grid__item Grid__item_20 Grid__item_adaptivThird">
+				<div class="Grid__item Grid__item_20 Grid__item_mobileThird">
 					<img class="Certifications__img" src="img/Certifications__img1.png" alt="">
 				</div>
-				<div class="Grid__item Grid__item_20 Grid__item_adaptivThird">
+				<div class="Grid__item Grid__item_20 Grid__item_mobileThird">
 					<img class="Certifications__img" src="img/Certifications__img2.png" alt="">
 				</div>
-				<div class="Grid__item Grid__item_20 Grid__item_adaptivThird">
+				<div class="Grid__item Grid__item_20 Grid__item_mobileThird">
 					<img class="Certifications__img" src="img/Certifications__img3.png" alt="">
 				</div>
-				<div class="Grid__item Grid__item_20 Grid__item_adaptivThird">
+				<div class="Grid__item Grid__item_20 Grid__item_mobileThird">
 					<img class="Certifications__img" src="img/Certifications__img4.png" alt="">
 				</div>
-				<div class="Grid__item Grid__item_20 Grid__item_adaptivThird">
+				<div class="Grid__item Grid__item_20 Grid__item_mobileThird">
 					<img class="Certifications__img" src="img/Certifications__img5.png" alt="">
 				</div>
 			</div>
